# hearnBakerCarithers4thEdition

./: CMakeLists.txt  README.md  buildDebug.bat  buildDebug.sh  macBuildDebug.sh
Chapter10/: ch10PerspectiveViewing3D.cpp
Chapter12/: ch12Animation.cpp
Chapter13/: ch13Polyhedron.cpp  ch13QuadricSurfaces.cpp
Chapter14/: ch14BezierCurve.cpp
Chapter20/: ch20GLUTMenu.cpp  ch20GLUTSubmenu.cpp  ch20KeyboardCurveDrawing.cpp  ch20MouseKeyboardSquares.cpp  ch20MousePlotPoint.cpp  ch20MousePolyline.cpp  ch20PickOperations.cpp
Chapter23/: ch23MandelbrotSet.cpp  ch23SelfSquaringFractal.cpp
Chapter3/: ch3OGLexample.c  ch3errorCheck.c
Chapter4/: ch4CircleVariations.cpp  ch4DispLstReshape.cpp  ch4DisplayList.c  ch4LineGraph.c  ch4PieChart.cpp
Chapter6/: ch6CircleMidpoint.cpp
Chapter7/: ch7CompositeTransformation2D.cpp
Chapter8/: ch8ViewingProgram2D.cpp
